@@ -1,0 +1,49 @@
+/* ============================================================
+* StatusBarIcons - Extra icons in statusbar for QupZilla
+* Copyright (C) 2013  David Rosca <nowrep@gmail.com>
+*
+* This program is free software: you can redistribute it and/or modify
+* it under the terms of the GNU General Public License as published by
+* the Free Software Foundation, either version 3 of the License, or
+* (at your option) any later version.
+*
+* This program is distributed in the hope that it will be useful,
+* but WITHOUT ANY WARRANTY; without even the implied warranty of
+* MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+* GNU General Public License for more details.
+*
+* You should have received a copy of the GNU General Public License
+* along with this program.  If not, see <http://www.gnu.org/licenses/>.
+* ============================================================ */
+#ifndef STATUSBARICONSPLUGIN_H
+#define STATUSBARICONSPLUGIN_H
+
+#include "plugininterface.h"
+
+class SBI_IconsManager;
+
+class StatusBarIconsPlugin : public QObject, public PluginInterface
+{
+    Q_OBJECT
+    Q_INTERFACES(PluginInterface)
+
+#if QT_VERSION >= 0x050000
+    Q_PLUGIN_METADATA(IID "QupZilla.Browser.plugin.StatusBarIcons")
+#endif
+
+public:
+    explicit StatusBarIconsPlugin();
+    PluginSpec pluginSpec();
+
+    void init(InitState state, const QString &settingsPath);
+    void unload();
+    bool testPlugin();
+
+    void showSettings(QWidget* parent = 0);
+
+private:
+    SBI_IconsManager* m_manager;
+
+};
+
+#endif // STATUSBARICONSPLUGIN_H
