@@ -1,0 +1,37 @@
+<?xml version="1.0" encoding="utf-8"?>
+<!DOCTYPE TS>
+<TS version="2.0">
+<context>
+    <name>SBI_ImagesIcon</name>
+    <message>
+        <location filename="../sbi_imagesicon.cpp" line="37"/>
+        <source>Modify images loading settings per-site and globally</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <location filename="../sbi_imagesicon.cpp" line="57"/>
+        <source>Current page settings</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <location filename="../sbi_imagesicon.cpp" line="60"/>
+        <source>Disable loading images (temporarily)</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <location filename="../sbi_imagesicon.cpp" line="63"/>
+        <source>Enable loading images (temporarily)</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <location filename="../sbi_imagesicon.cpp" line="67"/>
+        <source>Global settings</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <location filename="../sbi_imagesicon.cpp" line="69"/>
+        <source>Automatically load images</source>
+        <translation type="unfinished"></translation>
+    </message>
+</context>
+</TS>
