@@ -4,27 +4,27 @@
 <context>
     <name>TestPlugin</name>
     <message>
-        <location filename="../testplugin.cpp" line="116"/>
+        <location filename="../testplugin.cpp" line="121"/>
         <source>Close</source>
         <translation type="unfinished"></translation>
     </message>
     <message>
-        <location filename="../testplugin.cpp" line="127"/>
+        <location filename="../testplugin.cpp" line="132"/>
         <source>Example Plugin Settings</source>
         <translation type="unfinished"></translation>
     </message>
     <message>
-        <location filename="../testplugin.cpp" line="155"/>
+        <location filename="../testplugin.cpp" line="160"/>
         <source>My first plugin action</source>
         <translation type="unfinished"></translation>
     </message>
     <message>
-        <location filename="../testplugin.cpp" line="170"/>
+        <location filename="../testplugin.cpp" line="175"/>
         <source>Hello</source>
         <translation type="unfinished"></translation>
     </message>
     <message>
-        <location filename="../testplugin.cpp" line="170"/>
+        <location filename="../testplugin.cpp" line="175"/>
         <source>First plugin action works :-)</source>
         <translation type="unfinished"></translation>
     </message>
